GeoAlchemy Change Log
=====================

0.2
---

* Ported to SQLAlchemy 0.6
* When fetching objects of mapped classes, the geometry column
	is queried in WKB.
* The WKB value of a geometry column can be accessed directly,
	without making a new database query, using the attribute 
	geom_wkb (for example: s.the_geom.geom_wkb).
* Introduced DBSpatialElement that can be used to wrap the
	result of a database function, that returned a new geometry, so
	that new queries can be executed on the result.
	>>> buffer_geom = DBSpatialElement(session.scalar(r.geom.buffer(10.0)))
	>>> session.scalar(buffer_geom.wkt)
* Removed 'SFS' flag for GeometryColumn.
* When using database specific functions on geometry columns 
	(Spot.geom.kml, but not s.geom.kml!), a comparator has to be set
	manually when defining the mapping.
* Updated documentation and examples.
* Use spatial index for Spatialite.

0.1.1
-----

* ST_Transform support for postgis
* Non public schema support
* Several documentation fixes
* Some new examples

0.1
---

* Some documentation
* Support for spatial indexing
* Support for geometry collections
* MySQL support and MBR comparators
* Spatialite geometry relations as column comparators
* Postgis geometry relations as column comparators
* Spatial comparator
* GeometryBase as base class
* Unittests for spatialite
* Geometry functions for spatialite
* EPSG:4326 as default SRID

0.1dev
---

* OGC geometry relations
* PostGIS functions and format converters
* Posgis spatial functions based on OGC SQL/MM
* minor changes
* Improved spatialite support
* Unit tests for postgis
* Spatialite support
* PostGIS geometry support based on SQLAlchemy postgis example
