@@ -14,12 +14,12 @@ from geoalchemy.spatialite import SQLiteSpatialDialect
 class TestDialectManager(TestCase):
 
     def test_get_spatial_dialect(self):
-       spatial_dialect = DialectManager.get_spatial_dialect(PGDialect_psycopg2())
-       ok_(isinstance(spatial_dialect, PGSpatialDialect))
-       ok_(isinstance(DialectManager.get_spatial_dialect(MySQLDialect()), MySQLSpatialDialect))
-       ok_(isinstance(DialectManager.get_spatial_dialect(SQLiteDialect()), SQLiteSpatialDialect))
-       spatial_dialect2 = DialectManager.get_spatial_dialect(PGDialect_psycopg2())
-       ok_(spatial_dialect is spatial_dialect2, "only one instance per dialect should be created")
+        spatial_dialect = DialectManager.get_spatial_dialect(PGDialect_psycopg2())
+        ok_(isinstance(spatial_dialect, PGSpatialDialect))
+        ok_(isinstance(DialectManager.get_spatial_dialect(MySQLDialect()), MySQLSpatialDialect))
+        ok_(isinstance(DialectManager.get_spatial_dialect(SQLiteDialect()), SQLiteSpatialDialect))
+        spatial_dialect2 = DialectManager.get_spatial_dialect(PGDialect_psycopg2())
+        ok_(spatial_dialect is spatial_dialect2, "only one instance per dialect should be created")
     
     @raises(NotImplementedError)
     def test_get_spatial_dialect_unknown_dialect(self):
